--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ngx-bootstrap-feedback",
-  "version": "1.0.0-alpha2",
+  "version": "1.0.0-alpha4",
   "description": "Feedback modal powered by bootstrap for your Angular application.",
   "main": "./bundles/ngx-bootstrap-feedback.umd.js",
   "private": true,
   "peerDependencies": {
     "@angular/core": "^2.4.0 || ^4.0.0",
     "@herbis/ngx-modal": "^0.1.0",
+    "html2canvas": "^0.5.0-beta4",
     "rxjs": "^5.0.1"
   },
   "dependencies": {},
@@ -20,11 +21,8 @@
     "@herbis/ngx-modal": "^0.1.0",
     "codelyzer": "~2.0.0",
     "copyfiles": "^1.2.0",
+    "ng2-inline-template": "^0.1.1",
     "rollup": "^0.42.0",
-    "rollup-plugin-alias": "^1.3.1",
-    "rollup-plugin-angular": "^0.4.4",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
     "rxjs": "^5.0.1",
     "tslint": "4.5.0",
     "typescript": "^2.3.4",
@@ -33,12 +31,14 @@
   },
   "scripts": {
     "clean": "rm -rf build",
-    "transpile": "ngc",
+    "inline": "ng2inline --outDir=build/inlined \"src/**/*.ts\"",
+    "pretranspile": "npm run inline",
+    "transpile": "ngc -p tsconfig-aot.json",
     "package": "rollup -c",
     "minify": "uglifyjs build/dist/bundles/ngx-bootstrap-feedback.umd.js --screw-ie8 --compress --mangle --comments --output build/dist/bundles/ngx-bootstrap-feedback.umd.min.js",
     "prebuild": "npm run clean",
     "build": "npm run lint && npm run transpile && npm run package && npm run minify",
-    "postbuild": "copyfiles -f src/**/*.html package.json README.md build/dist",
+    "postbuild": "copyfiles package.json README.md build/dist",
     "lint": "tslint src/**/*.ts",
     "prepublishBeta": "npm run build",
     "publishBeta": "npm publish build/dist --tag beta"
