--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -13,7 +13,7 @@
       "rxjs/*": ["node_modules/rxjs/*"]
     },
     "rootDir": "build/inlined",
-    "outDir": "build/dist",
+    "outDir": "build/package",
     "sourceMap": true,
     "inlineSources": true,
     "target": "es5",
